# citrus-rag-system

./: Proposed_CNN_Updated.keras  explainability.py  main.py  pyproject.toml
qdrant_citrus_db/: meta.json
templates/: index.html  index1.html
