[project]
name = "citrus-rag-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-qdrant>=1.1.0",
    "pillow>=12.2.0",
    "pypdf>=6.12.2",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.5.1",
    "tensorflow>=2.21.0",
]
